--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <p>home works!</p>
 <nav>navbar here</nav>
-<h1>{{this.authService.user | json}}</h1>
+<h1>{{username}}</h1>
 <router-outlet></router-outlet>
