--- a/client/src/app/signup/signup.component.html
+++ b/client/src/app/signup/signup.component.html
@@ -1,1 +1,20 @@
-<p>signup works!</p>
+<p>login works!</p>
+<form method="post" (submit)="register()">
+  <label for="username">username</label>
+  <input
+    type="text"
+    placeholder="username"
+    name="username"
+    [(ngModel)]="form.username"
+    required
+  />
+  <label for="password">password</label>
+  <input
+    type="password"
+    placeholder="password"
+    name="password"
+    [(ngModel)]="form.password"
+    required
+  />
+  <button type="submit">Login</button>
+</form>
