--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+body {
+    font-family: 'Rubik', sans-serif;
+    color: rgb(16,21,25);
+}
