--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,6 +4,7 @@
     <h1>{{user.id}}</h1>
   <h1>{{user.username}}</h1>
   <h1>{{user.role}}</h1>
+  <h1>{{user.email}}</h1>
 </h1>
 <button (click)="logout()">logout</button>
 <router-outlet></router-outlet>
