--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,250 +1,253 @@
 .auth {
-    min-height: 100vh;
-    background-color: hsl(228, 33%, 97%);
+  min-height: 100vh;
+  background-color: hsl(228, 33%, 97%);
 }
 
-.auth>.wrapper {
-    display: grid;
-    min-height: inherit;
-    grid-template-columns: 60% 40%;
+.auth > .wrapper {
+  display: grid;
+  min-height: inherit;
+  grid-template-columns: 55% 45%;
 }
 
 .auth-body {
-    background-color: hsl(0, 0%, 100%);
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background-color: hsl(0, 0%, 100%);
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
+.footer {
+  font-size: 12px;
+  padding-bottom: 20px;
+  color: #6c757d;
+  position: absolute;
+  bottom: 0;
+  z-index: 1000;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 .banner {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .circle {
-    width: 28%;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background-color: hsl(257, 49%, 47%);
+  width: 28%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: hsl(257, 49%, 47%);
 }
 
 .overlay {
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    bottom: 0;
-    z-index: 2;
-    background-color: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  bottom: 0;
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 .auth-form {
-    max-width: 340px;
-    width: 100%;
+  max-width: 340px;
+  width: 100%;
 }
 
 .auth-title {
-    font-size: 1.5rem;
-    font-weight: 500;
-    margin-bottom: 1rem;
-    color: hsl(212, 24%, 26%);
+  font-family: "Playwrite CL", cursive;
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  color: hsl(212, 24%, 26%);
 }
 
-/* .error {
-    background-color: hsla(0, 100%, 50%, 0.297);
-    border-radius: 4px;
-    color: hsl(0, 100%, 50%);
-    padding: 0.75rem 0.5rem;
-    font-size: 0.875rem;
-    margin-bottom: 1.5rem;
-} */
-
+.error {
+  background-color: hsla(0, 100%, 50%, 0.196);
+  border-radius: 4px;
+  color: hsl(0, 100%, 50%);
+  padding: 0.75rem 0.5rem;
+  font-size: 0.875rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.remove-btn {
+  background-color: transparent;
+  border: none;
+  display: flex;
+  color: hsl(0, 100%, 50%);
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+}
 .auth-desc {
-    font-size: 0.875rem;
-    color: hsl(211, 10%, 45%);
-    margin-bottom: 1.5rem;
+  font-size: 0.875rem;
+  color: hsl(211, 10%, 45%);
+  margin-bottom: 1.5rem;
 }
-
 
 input {
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  padding-left: 1.2em;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
-
+.title {
+  font-family: "Playwrite CL", cursive;
+  font-weight: 600;
+}
 .input-group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.125rem;
-    margin-bottom: 1.125rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.125rem;
+  margin-bottom: 1.125rem;
+}
+input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px white inset !important;
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
+  -webkit-text-fill-color: black !important;
 }
 
-.input-group>.label {
-    color: hsl(212, 24%, 26%);
+.input-group > .label {
+  color: hsl(212, 24%, 26%);
 }
-
-/* .input-group:has(:not(:focus):not(:placeholder-shown):invalid)>.label {
-    color: hsl(0, 100%, 50%);
-}
-
-.input-group:has(:not(:focus):not(:placeholder-shown):invalid)>.input-container {
-    border-color: hsl(0, 100%, 50%);
-} */
-
-/*fix this*/
-/* .input-group:has(:not(:focus):not(:placeholder-shown):invalid)>.input-container::after {
-    content: attr(data-error);
-    color: hsl(0, 100%, 50%);
-    font-size: 0.6rem;
-    text-transform: capitalize;
-    position: absolute;
-    top: calc(100% + 0.25rem);
-} */
-
-/* .auth-body:has(.error) .input-group>.label {
-    color: hsl(0, 100%, 50%);
-}
-
-.auth-body:has(.error) .input-group:has(:focus)>.input-container {
-    border-color: hsl(0, 100%, 50%);
-} */
 
 .input-container {
-    padding: 0.85rem;
-    border-radius: 4px;
-    border: 1px solid hsl(0, 0%, 90%);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+  height: 45px;
+  border-radius: 4px;
+  border: 1px solid hsl(0, 0%, 90%);
+  position: relative;
+  overflow: hidden;
 }
 
-.input-group:has(:focus)>.label {
-    color: hsl(257, 49%, 47%);
+.input-group:has(:focus) > .label {
+  color: hsl(257, 49%, 47%);
 }
 
-.input-group:has(:focus)>.input-container {
-    border-color: hsl(257, 49%, 47%);
+.input-group:has(:focus) > .input-container {
+  border-color: hsl(257, 49%, 47%);
 }
 
 .pwd-icon {
-    color: hsl(211, 10%, 45%);
-    cursor: pointer;
+  color: hsl(211, 10%, 45%);
+  cursor: pointer;
 }
 
 .auth-btn {
-    width: 100%;
-    border: none;
-    height: 40px;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-    font-size: 1rem;
-    font-weight: 500;
-    background-color: hsl(257, 49%, 47%);
-    color: hsl(0, 0%, 100%);
-    transition: all 0.1s ease-in-out;
-    margin-bottom: 1rem;
+  width: 100%;
+  border: none;
+  height: 40px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 500;
+  background-color: hsl(257, 49%, 47%);
+  color: hsl(0, 0%, 100%);
+  transition: all 0.1s ease-in-out;
+  margin-bottom: 1rem;
 }
 
 .auth-btn:focus {
-    box-shadow: 0 0 0 4px hsl(257, 49%, 47%, 0.2);
+  box-shadow: 0 0 0 4px hsl(257, 49%, 47%, 0.2);
 }
 .loader-background {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top:0;
-    background-color: rgba(250, 248, 248, 0.5);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  background-color: rgba(250, 248, 248, 0.5);
 }
 ngx-ui-loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgba(255, 255, 255, 0.2);
-    width: 10px;
-    height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgba(255, 255, 255, 0.2);
+  width: 10px;
+  height: auto;
 }
 .back-btn {
-    width: 24px;
-    aspect-ratio: 1;
-    border-radius: 4px;
-    border: 1px solid #e6e6e6;
-    background: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 2rem;
-    left: 2rem;
-    z-index: 4;
+  width: 24px;
+  aspect-ratio: 1;
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 2rem;
+  left: 2rem;
+  z-index: 4;
 }
 
 .back-icon {
-    color: hsl(212, 24%, 26%);
-    font-size: 1rem;
+  color: hsl(212, 24%, 26%);
+  font-size: 1rem;
 }
 
 .message {
-    font-size: 0.875rem;
-    color: hsl(211, 10%, 45%);
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.125rem;
+  font-size: 0.875rem;
+  color: hsl(211, 10%, 45%);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.125rem;
 }
 
 .link-to {
-    color: hsl(257, 49%, 47%);
-    font-weight: 500;
-    text-decoration: none;
+  color: hsl(257, 49%, 47%);
+  font-weight: 500;
+  text-decoration: none;
 }
 
 @media screen and (width <=768px) {
-    .auth>.wrapper {
-        grid-template-columns: 1fr;
-        grid-template-rows: 20% 1fr;
-    }
+  .auth > .wrapper {
+    grid-template-columns: 1fr;
+    grid-template-rows: 20% 1fr;
+  }
 
-    .auth-body {
-        align-items: flex-start;
-    }
+  .auth-body {
+    align-items: flex-start;
+  }
 
-    .auth-form {
-        max-width: 100%;
-    }
+  .auth-form {
+    max-width: 100%;
+  }
 
-    .auth-title {
-        text-align: center;
-    }
+  .auth-title {
+    text-align: center;
+  }
 
-    .circle {
-        width: 48px;
-    }
+  .circle {
+    width: 48px;
+  }
 
-    .back-btn {
-        top: 1rem;
-        left: 1rem;
-    }
+  .back-btn {
+    top: 1rem;
+    left: 1rem;
+  }
 
-    .banner {
-        grid-column: 1;
-        grid-row: 1;
-        overflow: hidden;
-        background-color: white;
-    }
+  .banner {
+    grid-column: 1;
+    grid-row: 1;
+    overflow: hidden;
+    background-color: white;
+  }
 }
