--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,9 +3,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
 }
 body {
     font-family: 'Rubik', sans-serif;
     color: rgb(16,21,25);
+}
+
+main {
+    min-height: 100vh;
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
 }
