--- a/client/src/app/signup/signup.component.html
+++ b/client/src/app/signup/signup.component.html
@@ -1,20 +1,73 @@
-<p>login works!</p>
-<form method="post" (submit)="register()">
-  <label for="username">username</label>
-  <input
-    type="text"
-    placeholder="username"
-    name="username"
-    [(ngModel)]="form.username"
-    required
-  />
-  <label for="password">password</label>
-  <input
-    type="password"
-    placeholder="password"
-    name="password"
-    [(ngModel)]="form.password"
-    required
-  />
-  <button type="submit">Login</button>
-</form>
+<section class="auth">
+  <div class='wrapper'>
+    <button class='back-btn' title="back to home" (click)="back()">
+      <fa-icon [icon]="faArrowLeft"></fa-icon>
+    </button>
+
+    <div class='auth-body'>
+      <form class='auth-form' #form="ngForm" (ngSubmit)="register(form.value)">
+        <h3 class='auth-title'>Welcome to Promart!</h3>
+        <p class='auth-desc'>Please signin to continue shopping</p>
+        <div *ngIf="errorMessage" class="error">
+          <fa-icon [icon]="faExclamationTriangle"></fa-icon>
+          <p>{{errorMessage}}</p>
+          <button class="remove-btn">
+            <fa-icon [icon]="faXmark" (click)="removeError()"></fa-icon>
+          </button>
+        </div>
+
+        <div class='input-group'>
+          <label htmlFor='username' class='label'>
+            Username
+          </label>
+          <div class='input-container' data-error='enter valid email'>
+            <input type='text' name='username' ngModel required placeholder="What should we call you?" />
+          </div>
+        </div>
+
+        <div class='input-group'>
+          <label htmlFor='email' class='label'>
+            Email
+          </label>
+          <div class='input-container' data-error='enter valid email'>
+            <input type='email' name='email' ngModel required pattern='/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/g'
+              placeholder='Enter email' id='email' />
+          </div>
+        </div>
+
+        <div class='input-group'>
+          <label htmlFor='password' class='label'>
+            Password
+          </label>
+          <div class='input-container'>
+            <input type='password' name='password' ngModel placeholder='Enter password' required min='6' />
+          </div>
+        </div>
+
+        <button class='auth-btn' type='submit'>
+          <div *ngIf="isLoading" class="loader-background">
+            <ngx-ui-loader fgsType="three-bounce" bgsPosition="center-center" [bgsSize]="10"
+              fgsColor="white"></ngx-ui-loader>
+          </div>
+          Signup
+        </button>
+
+        <span class='message'>
+          Already have an account?
+          <a routerLink="/login" class='link-to'>
+            Login
+          </a>
+        </span>
+
+      </form>
+      <footer class="footer">
+        <p>© 2024 Promart Supermarket. All rights reserved.</p>
+      </footer>
+    </div>
+    <div class='banner'>
+      <div class='circle'>
+      </div>
+      <div class='overlay'></div>
+    </div>
+  </div>
+</section>
