--- a/client/src/app/auth-template/auth-template.component.html
+++ b/client/src/app/auth-template/auth-template.component.html
@@ -1,1 +1,20 @@
-<router-outlet></router-outlet>
+<section class="auth">
+  <div class="wrapper">
+    <button class="back-btn" title="back to home" (click)="back()">
+      <fa-icon [icon]="faArrowLeft"></fa-icon>
+    </button>
+
+    <div class="auth-body">
+      <router-outlet></router-outlet>
+      <footer class="footer">
+        <p>© 2024 Promart Supermarket. All rights reserved.</p>
+      </footer>
+    </div>
+
+    <div class="banner">
+      <div class="circle"></div>
+      <div class="overlay"></div>
+    </div>
+    
+  </div>
+</section>
