--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,10 +1,3 @@
-<p>home works!</p>
-<nav>navbar here</nav>
-<h1 *ngIf="user">
-    <h1>{{user.id}}</h1>
-  <h1>{{user.username}}</h1>
-  <h1>{{user.role}}</h1>
-  <h1>{{user.email}}</h1>
+<h1>
+    home component
 </h1>
-<button (click)="logout()">logout</button>
-<router-outlet></router-outlet>
