--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,24 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
-    font-family: 'Rubik', sans-serif;
-    color: rgb(16,21,25);
+  font-family: "Rubik", sans-serif;
+  color: rgb(16, 21, 25);
 }
 
 main {
-    min-height: 100vh;
-    scroll-behavior: smooth;
+  min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
+}
+
+input {
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  padding-left: 1.2em;
+}
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px white inset !important;
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
+  -webkit-text-fill-color: black !important;
+}
+
+button {
+  cursor: pointer;
 }
