--- a/client/src/app/navbar/navbar.component.css
+++ b/client/src/app/navbar/navbar.component.css
@@ -1,9 +1,20 @@
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
 .wrapper {
   height: 60px;
-  background-color: white;
+  background-color: rgba(172, 172, 172, 0);
   border-bottom: 1px solid #e7e7e7;
   display: flex;
   align-items: center;
+  position: fixed;
+  width: 100%;
+  backdrop-filter: blur(14px) saturate(150%);
+  -webkit-backdrop-filter: blur(14px) saturate(150%);
+  z-index: 100;
 }
 
 .navbar {
@@ -34,12 +45,6 @@
   cursor: pointer;
 }
 
-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
 .logo-wrapper {
   width: 120px;
   cursor: pointer;
@@ -47,6 +52,7 @@ button {
   align-items: center;
   justify-content: center;
 }
+
 .avatar {
   width: 35px;
   aspect-ratio: 1;
@@ -60,10 +66,13 @@ button {
   background-color: #5e3db3;
   position: relative;
 }
-.cart-icon {
-  width: 25px;
-  height: 25px;
+.cart-icon,
+.close-icon {
+  width: 35px;
+  height: 35px;
   cursor: pointer;
+  border-radius: 12px;
+  border: 1px solid #e7e7e7;
   color: rgb(46, 46, 46);
   display: flex;
   align-items: center;
@@ -89,10 +98,18 @@ button {
   font-size: small;
 }
 
+.chip.cart-count {
+  border-color: transparent;
+  font-size: 0.65rem;
+  background-color: red;
+  color: white;
+}
+
 .username {
   font-weight: 600;
   color: white;
 }
+
 .logo {
   width: 100%;
   height: auto;
@@ -115,4 +132,84 @@ button {
 
 .active {
   color: #007bff;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 400px;
+  background-color: white;
+  right: 0;
+  z-index: 9999;
+  border-left: 1px solid #e7e7e7;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.back-drop {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 200;
+  display: none;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(10px) saturate(142%);
+  -webkit-backdrop-filter: blur(10px) saturate(142%);
+  background-color: rgba(0, 0, 0, 0.516);
+}
+.back-drop.active {
+  display: block;
+}
+
+.actions {
+  border-bottom: 1px solid #e7e7e7;
+  height: 67px;
+  padding-inline: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.cart-items {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.cart-item {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  height: 100px;
+}
+
+.cart-image {
+  width: 100%;
+  height: inherit;
+  object-fit: contain;
+}
+
+.empty-cart {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+  justify-content: center;
+  align-items: center;
+}
+
+.empty-cart > img {
+  width: 100%;
+  object-fit: contain;
+  position: relative;
+}
+
+
+@media screen and (width <=768px) {
+  .sidebar {
+    width: calc(100vw - 60px);
+  }
 }
