--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -5,13 +5,15 @@
     </div>
     <div *ngIf="authService.isLoggedIn; else authTemplate">
       <div class="flex">
+        <!-- <div>orders</div> -->
         <div
           *hasRoles="[roles.USER]"
           class="cart-icon"
+          (click)="toggleState()"
           title="cart"
         >
           <fa-icon [icon]="faShoppingCart"></fa-icon>
-          <span *ngIf="cartCount" class="chip">0</span>
+          <span *ngIf="cartCount" class="chip cart-count">{{cartCount}}</span>
         </div>
         <div class="avatar">
           <span class="username" [title]="user.username">
@@ -31,4 +33,34 @@
       </div>
     </ng-template>
   </div>
+  <section class="back-drop" [class.active]="state === 'open'"></section>
+  <section [@slideOpen]="state" class="sidebar">
+    <div class="actions">
+      <button class="close-icon" (click)="toggleState()">X</button>
+    </div>
+    <div *ngIf="cart.items.length; else emptyCart">
+      <div class="cart-items">
+        <div *ngFor="let item of cart.items" class="cart-item">
+          <img
+            [src]="item.product.imageUrl"
+            alt="product image"
+            class="cart-image"
+          />
+          <div class="cart-details">
+            <h3>{{item.product.name}}</h3>
+            <p>{{item.product.price | currency}}</p>
+          </div>
+          <div class="cart-actions">
+            <button class="btn">Remove</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <ng-template #emptyCart>
+      <div class="empty-cart">
+        <img src="https://cdni.iconscout.com/illustration/premium/thumb/empty-cart-8580703-6763417.png" alt="empty-cart-image">
+        <h3>nothing there yet!</h3>
+      </div>
+    </ng-template>
+  </section>
 </header>
