--- a/client/src/app/signup/signup.component.css
+++ b/client/src/app/signup/signup.component.css
@@ -27,7 +27,7 @@ ngx-ui-loader {
 }
 
 .auth-form {
-  min-width: 300px;
+  min-width: 320px;
   max-width: 340px;
   width: 100%;
 }
@@ -72,18 +72,17 @@ ngx-ui-loader {
   display: flex;
   flex-direction: column;
   gap: 0.125rem;
-  margin-bottom: 1.125rem;
+  margin-bottom: 1.45rem;
+  position: relative;
 }
 
 .input-group > .label {
   color: hsl(212, 24%, 26%);
 }
 
-.input-group:has(:focus) > .label {
-  color: rgb(94, 61, 179);
-}
-
+.input-group:has(:focus) > .label,
 .input-group:has(:focus) > .input-container {
+  color: hsl(257, 49%, 47%);
   border-color: hsl(257, 49%, 47%);
 }
 
@@ -91,7 +90,6 @@ ngx-ui-loader {
   height: 45px;
   border-radius: 4px;
   border: 1px solid hsl(0, 0%, 90%);
-  position: relative;
   overflow: hidden;
 }
 
@@ -138,4 +136,36 @@ ngx-ui-loader {
   color: hsl(257, 49%, 47%);
   font-weight: 500;
   text-decoration: none;
+}
+
+/*form validation*/
+.input-group.has-error .input-container {
+  border-color: hsl(0, 100%, 50%);
+}
+
+.input-group.has-error .label {
+  color: hsl(0, 100%, 50%);
+}
+
+.input-group.has-error::after {
+  content: attr(data-error);
+  position: absolute;
+  top: 100%;
+  left: 0;
+  color: hsl(0, 100%, 50%);
+  font-size: 0.75rem;
+  white-space: nowrap;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+
+@media screen and (width <=768px) {
+  .auth-form {
+    max-width: 100%;
+  }
+
+  .auth-title {
+    text-align: center;
+  }
 }
