--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="wrapper">
   <div class="categories">
-    <button *ngFor="let category of this.categories" class="category" [class.active]="category.id===tabIndex" (click)="filter(category.id)" >
+    <button *ngFor="let category of this.categories" class="category" [class.active]="category.name===key" (click)="filter(category.name)" >
       <span>{{category.name}}</span>
     </button>
   </div>
@@ -8,10 +8,26 @@
     <div *ngFor="let product of this.filteredProducts" class="product">
       <img [src]="product.imageUrl" class="banner" [alt]="product.name" />
       <div class="body">
-        <h3 class="name">{{product.name}}</h3>
-        <p class="desc">{{product.description}}</p>
-        <span class="price">{{product.price | currency}}</span>
+        <div class="content">
+          <div class="content-wrapper">
+            <h3 class="name">{{product.name}}</h3>
+            <p class="desc">{{product.description}}</p>
+          </div>
+          <div class="price">{{product.price | currency}}</div>
+        </div>
+        <div class="actions">
+          <div *hasRoles="[roles.USER]" class="add-sub-btn">
+              <fa-icon class="plus" [icon]="faPlus" (click)="quantities[product.id] < product.quantity ? quantities[product.id] = quantities[product.id] + 1 :  null">+</fa-icon>
+              <div class="count">{{quantities[product.id]}}</div>
+              <fa-icon class="minus" [icon]="faMinus" (click)="quantities[product.id] > 1 ? quantities[product.id]=quantities[product.id] - 1 : null">-</fa-icon>
+          </div>
+          <button  (click)="addToCart(product.id,quantities[product.id])" class="cart-btn" title="add to cart">
+            <fa-icon [icon]="faCartPlus"></fa-icon>
+            <span>Cart</span>
+          </button>
+        </div>
       </div>
     </div>
   </div>
+  <app-cart [cartItems]="cartItems" ></app-cart>
 </section>
