--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-toastr/toastr';
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +8,7 @@
 body {
   font-family: "Rubik", sans-serif;
   color: rgb(16, 21, 25);
+  user-select: none;
 }
 
 main {
