--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -57,7 +57,7 @@
 
   <span class="message">
     Don't have an account?
-    <a routerLink="/signup" class="link-to">
+    <a routerLink="/auth/signup" class="link-to">
       Sign up
     </a>
   </span>
