--- a/client/src/app/popup/popup.component.html
+++ b/client/src/app/popup/popup.component.html
@@ -1,10 +1,13 @@
-<div class="popup-overlay" *ngIf="isVisible" (click)="closePopup()"></div>
-<div class="popup-content" *ngIf="isVisible">
-  <div class="popup-header">
-    <h2>{{ title }}</h2>
-    <button class="close-button" (click)="closePopup()">×</button>
-  </div>
-  <div class="popup-body">
-    <ng-content></ng-content>
+<div class="model" *ngIf="isVisible" (click)="closePopup()">
+  <div @fade class="popup-content" *ngIf="isVisible" (click)="$event.stopPropagation()">
+    <div class="popup-header">
+      <h2 class="popup-title">{{ title }}</h2>
+      <button class="close-button" (click)="closePopup()">
+        <fa-icon [icon]="faXmark"></fa-icon>
+      </button>
+    </div>
+    <div class="popup-body">
+      <ng-content></ng-content>
+    </div>
   </div>
 </div>
