--- a/client/src/app/admin-home/admin-home.component.css
+++ b/client/src/app/admin-home/admin-home.component.css
@@ -1,17 +1,3 @@
-.wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  flex-direction: column;
-  width: 85%;
-  margin: auto;
-  padding-block:2rem ;
-  overflow-x:auto;
-}
-.table-wrapper {
-  width: 100%;
-  overflow-x:auto;
-}
 table {
   font-family: arial, sans-serif;
   border-radius: 0.5rem;
@@ -29,6 +15,20 @@ th {
 th {
   background-color: #f2f2f2;
   text-transform: capitalize;
+}
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  flex-direction: column;
+  width: 85%;
+  margin: auto;
+  padding-block:2rem ;
+  overflow-x:auto;
+}
+.table-wrapper {
+  width: 100%;
+  overflow-x:auto;
 }
 .btn-group {
   display: flex;
@@ -58,55 +58,42 @@ th {
   color: red;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 8px;
-}
-
-form input {
-  margin-bottom: 15px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-}
 .product-url {
   color: rgb(94,61,179);
   font-weight: 600;
   text-decoration: underline;
 }
-form button {
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-form button:hover {
-  background-color: #0056b3;
-}
-
-form input[type="text"],
-form input[type="number"] {
+.form {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  margin: auto;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
 }
 
-form input[type="number"]::-webkit-outer-spin-button,
-form input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.125rem;
+  position: relative;
 }
 
-form input[type="number"] {
-  -moz-appearance: textfield;
-  appearance: textfield;
+.input-group > .label {
+  color: hsl(212, 24%, 26%);
+}
+
+.input-group:has(:focus) > .label,
+.input-group:has(:focus) > .input-container {
+  color: hsl(257, 49%, 47%);
+  border-color: hsl(257, 49%, 47%);
+}
+.input-container {
+  height: 45px;
+  border-radius: 4px;
+  border: 1px solid hsl(0, 0%, 90%);
+  overflow: hidden;
 }
 
 .add-btn {
