--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -42,33 +42,98 @@
 </section>
 
 <app-popup #productForm title="add product">
-  <form #form="ngForm" (ngSubmit)="this.addProduct(form.value)">
-    <input type="text" name="name" placeholder="name" ngModel />
-    <input type="number" name="price" placeholder="price" ngModel />
-    <input type="number" name="quantity" placeholder="quantity" ngModel />
-    <input type="text" name="imageUrl" placeholder="image url" ngModel />
-    <input type="text" name="description" placeholder="description" ngModel />
-    <input type="text" name="categoryName" placeholder="categoryName" ngModel />
-    <button type="submit">Add</button>
+  <form #form="ngForm" (ngSubmit)="this.addProduct(form.value)" class="form">
+    <div class="input-group">
+      <label htmlFor="name" class="label">Name</label>
+      <div class="input-container">
+        <input type="text" name="name" placeholder="name" ngModel />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="price" class="label">Price</label>
+      <div class="input-container">
+        <input type="number" name="price" placeholder="price" ngModel />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="quantity" class="label">Quantity</label>
+      <div class="input-container">
+        <input type="number" name="quantity" placeholder="quantity" ngModel />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="imageUrl" class="label">Image URL</label>
+      <div class="input-container">
+        <input type="text" name="imageUrl" placeholder="image url" ngModel />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="description" class="label">Description</label>
+      <div class="input-container">
+        <input type="text" name="description" placeholder="description" ngModel />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="categoryName" class="label">Category Name</label>
+      <div class="input-container">
+        <input type="text" name="categoryName" placeholder="category name" ngModel />
+      </div>
+    </div>
+    
+    <button type="submit" class="add-btn">Add</button>
   </form>
+  
 </app-popup>
 
-<app-popup #popup title="update product">
-  <form *ngIf="selectedProduct">
-    <input type="text" name="name" [(ngModel)]="selectedProduct.name" />
-    <input type="number" name="price" [(ngModel)]="selectedProduct.price" />
-    <input type="number" name="quantity" [(ngModel)]="selectedProduct.quantity" />
-    <input
-      type="text"
-      name="description"
-      [(ngModel)]="selectedProduct.description"
-    />
-    <input
-      type="text"
-      name="categoryName"
-      [(ngModel)]="selectedProduct.categoryName"
-    />
-    <input type="text" name="imageUrl" [(ngModel)]="selectedProduct.imageUrl" />
-    <button (click)="updateProduct(selectedProduct)">Update</button>
+<app-popup #popup title="Update Product">
+  <form *ngIf="selectedProduct" class="form">
+    <div class="input-group">
+      <label htmlFor="name" class="label">Name</label>
+      <div class="input-container">
+        <input type="text" name="name" [(ngModel)]="selectedProduct.name" />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="price" class="label">Price</label>
+      <div class="input-container">
+        <input type="number" name="price" [(ngModel)]="selectedProduct.price" />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="quantity" class="label">Quantity</label>
+      <div class="input-container">
+        <input type="number" name="quantity" [(ngModel)]="selectedProduct.quantity" />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="description" class="label">Description</label>
+      <div class="input-container">
+        <input type="text" name="description" [(ngModel)]="selectedProduct.description" />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="categoryName" class="label">Category Name</label>
+      <div class="input-container">
+        <input type="text" name="categoryName" [(ngModel)]="selectedProduct.categoryName" />
+      </div>
+    </div>
+    
+    <div class="input-group">
+      <label htmlFor="imageUrl" class="label">Image URL</label>
+      <div class="input-container">
+        <input type="text" name="imageUrl" [(ngModel)]="selectedProduct.imageUrl" />
+      </div>
+    </div>
+    
+    <button (click)="updateProduct(selectedProduct)" class="btn edit-btn">Update</button>
   </form>
 </app-popup>
