--- a/client/src/app/cart/cart.component.html
+++ b/client/src/app/cart/cart.component.html
@@ -1,19 +1,26 @@
 <div @slide *ngIf="!cartService.hidden" class="sidebar">
   <div class="actions">
-    <button class="close-icon" (click)="cartService.toggle()">
+    <button class="close-icon" (click)="close()">
       <fa-icon [icon]="faXmark"></fa-icon>
     </button>
+    <button class="checkout-btn" (click)="checkout()" *ngIf="isCheckoutButtonVisible()">checkout {{selectedCartItems.length}} items "{{selectedItemsPrice | currency}}"</button>
   </div>
   <div class="sidebar-content" *ngIf="cartItems.length; else emptyCart">
     <div class="cart-items" >
+      <div class="cart-actions">
+        <button class="selectall-btn" [class.active]="cartItems.length===selectedCartItems.length" (click)="toggleAll()">select all</button>
+        <button class="clear-cart-btn" (click)="clearCart()">
+          <fa-icon [icon]="faTrash"></fa-icon>
+          clear cart</button>
+      </div>
       <div class="cart-item" *ngFor="let item of this.cartItems"  [class.selected]="isSelected(item.id)">
-        <div (click)="selectCartItem(item.id)" class="selector" [class.active]="isSelected(item.id)"></div>
+        <div (click)="toggleCartItem(item)" class="selector" [class.active]="isSelected(item.id)"></div>
         <div class="image-wrapper">
           <img class="cart-image" [src]="item.imageUrl" alt="">
         </div>
         <div class="details-wrapper">
           <h3>{{item.productName}}</h3>
-          <div class="price">{{item.price | currency}} x {{item.quantity}}         <span class="total">Total: {{item.price * item.quantity| currency}}</span></div>
+          <div class="price">{{item.price | currency}} x {{item.quantity}}<span class="total">Total: {{item.price * item.quantity| currency}}</span></div>
           <div class="item-action-wrapper">
             <div class="quantity">
               <fa-icon class="plus" [icon]="faMinus" (click)="decreaseQuantity(item.id)"></fa-icon>
@@ -42,4 +49,7 @@
     </div>
   </ng-template>
 </div>
-<div class="back-drop" [class.active]="!cartService.hidden" (click)="cartService.toggle()"></div>
+<div class="back-drop" [class.active]="!cartService.hidden" (click)="cartService.close()"></div>
+<app-popup #orderForm title="place order">
+  <app-order-form [selectedItems]="selectedCartItems" (close)="orderForm.closePopup()"></app-order-form>
+</app-popup>
