--- a/client/src/app/popup/popup.component.css
+++ b/client/src/app/popup/popup.component.css
@@ -1,39 +1,75 @@
-.popup-overlay {
+.model {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
   z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(10px) saturate(142%);
+  -webkit-backdrop-filter: blur(10px) saturate(142%);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
+
 .popup-content {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background: white;
-  padding: 20px;
-  border-radius: 8px;
-  z-index: 1001;
-  width: 300px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  z-index: 1003;
+  width: 460px;
+  height: 400px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .popup-header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: white;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #ddd;
+  z-index: 1004;
 }
-
 .close-button {
-  background: none;
-  border: none;
-  font-size: 20px;
   cursor: pointer;
+  font-size: medium;
+  background-color: tomato;
+  color: white;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.25rem;
+  border: 1px solid #e7e7e7;
+}
+.popup-title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  text-transform: capitalize;
 }
 
-.popup-body {
-  margin: 20px 0;
+.popup-body{
+  flex: 1; 
+  padding: 0.25rem;
+  overflow: auto;
+}
+
+@media (max-width: 768px) {
+  .model{
+    padding:10px;
+  }
+  .popup-content {
+    width: 100%;
+    height: 100%;
+  }
 }
